@@ -23,6 +23,12 @@
             <id>bstats-repo</id>
             <url>http://repo.bstats.org/content/repositories/releases/</url>
         </repository>
+        
+        <!-- RedProtect -->
+        <repository>  
+            <id>redprotect-repo</id>  
+            <url>https://raw.githubusercontent.com/FabioZumbi12/RedProtect/mvn-repo/</url>  
+        </repository>  
 
         <repository>
             <id>sk89q-repo</id>
@@ -174,6 +180,21 @@
             <version>4.3.3.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- RedProtect -->
+        <dependency> 
+            <groupId>br.net.fabiozumbi12.RedProtect</groupId>  
+            <artifactId>RedProtect-Core</artifactId>  
+            <version>LATEST</version>  
+            <scope>provided</scope>  
+        </dependency>  
+        <!--<dependency>  
+            <groupId>br.net.fabiozumbi12.RedProtect</groupId>  
+            <artifactId>RedProtect-[Check below for dependency names]</artifactId>  
+            <version>LATEST</version>  
+            <scope>provided</scope>  
+        </dependency>  -->
+        
     </dependencies>
 
     <build>
